Moved calls to client communicator